@@ -90,7 +90,30 @@ class BannersTableBanner extends JTable
 		if (isset($array['params']) && is_array($array['params'])) {
 			$registry = new JRegistry();
 			$registry->loadArray($array['params']);
+
+			if((int) $registry->get('width', 0) < 0){
+				$this->setError(JText::sprintf('JLIB_DATABASE_ERROR_NEGATIVE_NOT_PERMITTED', JText::_('COM_BANNERS_FIELD_WIDTH_LABEL')));
+				return false;
+			}
+			
+			if((int) $registry->get('height', 0) < 0){
+				$this->setError(JText::sprintf('JLIB_DATABASE_ERROR_NEGATIVE_NOT_PERMITTED', JText::_('COM_BANNERS_FIELD_HEIGHT_LABEL')));
+				return false;
+			}			
+			
+			// Converts the width and height to an absolute numeric value:
+			$width = abs((int) $registry->get('width', 0));
+			$height = abs((int) $registry->get('height', 0));
+
+			// Sets the width and height to an empty string if = 0
+			$registry->set('width', ($width ? $width : ''));
+			$registry->set('height', ($height ? $height : ''));
+
 			$array['params'] = (string)$registry;
+		}
+
+		if (isset($array['imptotal'])) {
+			$array['imptotal'] = abs((int) $array['imptotal']);
 		}
 
 		return parent::bind($array, $ignore);
