@@ -122,7 +122,7 @@ COM_BANNERS_FIELD_VALUE_CUSTOM="Custom"
 COM_BANNERS_FIELD_VALUE_IMAGE="Image"
 COM_BANNERS_FIELD_VALUE_USECLIENTDEFAULT="-- Use Client Default --"
 COM_BANNERS_FIELD_VALUE_USECOMPONENTDEFAULT="-- Use Component Default --"
-COM_BANNERS_FIELD_WIDTH_LABEL="Width (px)"
+COM_BANNERS_FIELD_WIDTH_LABEL="Width"
 COM_BANNERS_FIELD_WIDTH_DESC="The width of the banner"
 COM_BANNERS_FILENAME="%1$s-banners-tracks-%2$s"
 COM_BANNERS_GROUP_LABEL_PUBLISHING_DETAILS="Publishing Options"
