@@ -633,6 +633,7 @@ JLIB_DATABASE_ERROR_MOVE_FAILED="%s::move failed - %s"
 JLIB_DATABASE_ERROR_MUSTCONTAIN_A_TITLE_CATEGORY="Category must have a title"
 JLIB_DATABASE_ERROR_MUSTCONTAIN_A_TITLE_EXTENSION="Extension must have a title"
 JLIB_DATABASE_ERROR_MUSTCONTAIN_A_TITLE_MODULE="Module must have a title"
+JLIB_DATABASE_ERROR_NEGATIVE_NOT_PERMITTED="%s cannot be negative"
 JLIB_DATABASE_ERROR_NO_ROWS_SELECTED="No rows selected."
 JLIB_DATABASE_ERROR_NOT_SUPPORTED_FILE_NOT_FOUND="Table %s not supported. File not found."
 JLIB_DATABASE_ERROR_NULL_PRIMARY_KEY="Null primary key not allowed."
